# LightThemAllRustDioxus

./: Cargo.toml  README.md
.github/workflows/: rust.yml
locales/: en.yml  es.yml  fr.yml
src/: main.rs  style.css
src/components/: mod.rs
src/components/board/: light.rs  mod.rs  style.css
src/components/light/: mod.rs  style.css
src/components/won_label/: mod.rs  style.css
src/game_core/: board_modification.rs  game_status.rs  mod.rs
