[package]
name = "light-them-all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.3", features = ["desktop"] }
dioxus-desktop = "0.2.2"
lazy_static = "1.4.0"
rand = "0.8.5"
rust-i18n = "0.5.2"

[package.metadata.i18n]
available-locales = ["en", "fr", "es"]
default-locale = "en"
